--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
         hello, I am <br />
         Anousone
       </h1>
-      <img src="img/home.png" class="home-img" alt="" />
+      <img src="img/home.JPG" class="home-img" alt="" />
+    </section>
+
+    <!-- about section -->
+    <section class="about-section">
+      <div class="about">
+        <div class="about-img-container">
+          <img src="img/home.JPG" class="about-img" alt="" />
+          <button class="download-cv-btn">download cv</button>
+        </div>
+        <p class="about-info">
+          but you can call me Ana. This is about me. Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua.
+        </p>
+      </div>
     </section>
   </body>
 </html>
