--- a/index.html
+++ b/index.html
@@ -10,34 +10,28 @@
   <body>
     <!-- navbar -->
     <nav class="navbar">
-      <ul class="link-group">
-        <li class="link active"><a href="#">home</a></li>
+        <li class="link"><a href="#">home</a></li>
         <li class="link"><a href="#">projects</a></li>
-        <li class="link"><a href="#">about</a></li>
+        <a href="#about">about</a>
         <li class="link"><a href="#">contact</a></li>
-      </ul>
+      
     </nav>
-    <section class="home-section active">
+    <section class="home-section active" id="home">
       <h1 class="hero-heading">
-        hello, I am <br />
+        Hello, I am <br />
         Anousone
       </h1>
-      <img src="img/home.JPG" class="home-img" alt="" />
+      <img src="img/home.JPG" class="home-img" alt="me in Montana" />
     </section>
 
     <!-- about section -->
-    <section class="about-section">
-      <div class="about">
-        <div class="about-img-container">
-          <img src="img/home.JPG" class="about-img" alt="" />
-          <button class="download-cv-btn">download cv</button>
-        </div>
-        <p class="about-info">
-          but you can call me Ana. This is about me. Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua.
+    <section class="about" id="about">
+      <h1 class="about">About Me</h1>
+<p class="about">
+          It's pronounced Ana-saun, but you can call me Ana. This is about me. Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
         </p>
-      </div>
+    
+    </section>
     </section>
   </body>
 </html>
