updated about me

--- a/index.html
+++ b/index.html
@@ -8,30 +8,48 @@
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
-    <!-- navbar -->
     <nav class="navbar">
-        <li class="link"><a href="#">home</a></li>
-        <li class="link"><a href="#">projects</a></li>
-        <a href="#about">about</a>
-        <li class="link"><a href="#">contact</a></li>
-      
+      <li class="link"><a href="#home">home</a></li>
+      <li class="link"><a href="#projects">projects</a></li>
+      <li class="link"><a href="#about">about</a></li>
+      <li class="link"><a href="#contact">contact</a></li>
     </nav>
-    <section class="home-section active" id="home">
-      <h1 class="hero-heading">
-        Hello, I am <br />
-        Anousone
-      </h1>
-      <img src="img/home.JPG" class="home-img" alt="me in Montana" />
-    </section>
 
-    <!-- about section -->
-    <section class="about" id="about">
-      <h1 class="about">About Me</h1>
-<p class="about">
-          It's pronounced Ana-saun, but you can call me Ana. This is about me. Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-        </p>
-    
+    <section class="home-section" id="home">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+            <h2 class="hero_title">Hi, it's me Anousone</h2>
+            <p class="hero_desc">Future Web Developer</p>
+            <img src="img/home.JPG" class="home-img" alt="me in Montana" />
+          </div>
+        </div>
+      </div>
     </section>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <section class="about" id="about">
+      <h1 class="header-about">About Me</h1>
+      <p class="about">
+        It's pronounced Ana-saun, but you can call me Ana. This is about me.
+        Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod
+        tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
+        nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit
+        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui
+        officia deserunt mollit anim id est laborum.
+      </p>
     </section>
   </body>
 </html>
