added project section

--- a/index.html
+++ b/index.html
@@ -51,5 +51,15 @@
         officia deserunt mollit anim id est laborum.
       </p>
     </section>
+    <br /><br /><br /><br />
+    <section class="projects" id="projects">
+      <h1 class="project-heading">Projects</h1>
+      <p class="project-info">
+        Here, you can find some of my projects<br /><a
+          href="https://github.com/anakayy"
+          >Click here to see my work</a
+        >
+      </p>
+    </section>
   </body>
 </html>
